test/expressions/lydia/noinit/lateNoinit.good
lateNoinit.chpl:3: syntax error: near 'noinit'
